Pontoon: Update Spanish (Chile) (es-CL) localization of Firefox Co-authored-by: ravmn <ravmn@ravmn.cl>

--- a/es-CL/toolkit/chrome/passwordmgr/passwordmgr.properties
+++ b/es-CL/toolkit/chrome/passwordmgr/passwordmgr.properties
@@ -48,7 +48,7 @@ updatePasswordMsgNoUser = ¿Deseas actualizar la contraseña guardada?
 userSelectText2 = Selecciona que conexión actualizar:
 removeLoginPrompt=¿Estás seguro de que deseas eliminar esta conexión?
 removeLoginTitle=Eliminar conexión
-loginsDescriptionAll2=Las conexiones para los siguientes sitios son almacenadas en tu computador
+loginsDescriptionAll2=Las credenciales para los siguientes sitios son almacenadas en tu computador
 
 # LOCALIZATION NOTE (useASecurelyGeneratedPassword):
 # Shown in the autocomplete popup to allow filling a generated password into a password field.
@@ -72,10 +72,10 @@ displaySameOrigin=De este sitio
 
 # LOCALIZATION NOTE (insecureFieldWarningDescription2):
 # %1$S will contain insecureFieldWarningLearnMore and look like a link to indicate that clicking will open a tab with support information.
-insecureFieldWarningDescription2 = Esta conexión no es segura. Las conexiones ingresadas aquí pueden verse comprometidas. %1$S
-insecureFieldWarningDescription3 = Las conexiones ingresadas aquí pueden verse comprometidas. %1$S
+insecureFieldWarningDescription2 = Esta conexión no es segura. Las credenciales ingresadas aquí pueden verse comprometidas. %1$S
+insecureFieldWarningDescription3 = Las credenciales ingresadas aquí pueden verse comprometidas. %1$S
 insecureFieldWarningLearnMore = Aprender más
 
 # LOCALIZATION NOTE (viewSavedLogins.label):
 # This label is used in the footer of login autocomplete menus.
-viewSavedLogins.label= Ver conexiones guardadas
+viewSavedLogins.label= Ver credenciales guardadas
