Pontoon: Update Spanish (Chile) (es-CL) localization of Firefox Co-authored-by: ravmn <ravmn@ravmn.cl>

--- a/es-CL/security/manager/chrome/pippki/pippki.properties
+++ b/es-CL/security/manager/chrome/pippki/pippki.properties
@@ -8,6 +8,7 @@
 newCAMessage1=¿Desea confiar "%S" para los siguientes propósitos?
 unnamedCA=Autoridad de Certificación (sin nombre)
 
+# PKCS#12 file dialogs
 getPKCS12FilePasswordMessage=Por favor ingrese la contraseña que fue usada para encriptar este respaldo de certificado:
 
 # Client auth
@@ -66,7 +67,7 @@ pageInfo_Privacy_Encrypted1=La página que estás viendo fue cifrada antes de se
 pageInfo_Privacy_Encrypted2=El cifrado hace que sea difícil para personas no autorizadas el ver la infromación que viaja entre computadores. Por ello es muy poco probable que alguien lea esta página mientras viaja por la red.
 pageInfo_MixedContent=Conexión parcialmente cifrada
 pageInfo_MixedContent2=Partes de la página que esta viendo no fueron cifradas antes de ser transmitidas por Internet.
-pageInfo_WeakCipher=Su conexión a este sitio web usa un cifrado débil y no es privado. Otras personas pueden ver su información o modificar el comportamiento del navegador.
+pageInfo_WeakCipher=Tu conexión a este sitio web usa un cifrado débil y no es privado. Otras personas pueden ver tu información o modificar el comportamiento del navegador.
 pageInfo_CertificateTransparency_Compliant=El sitio cumple con la política de transparencia de certificados.
 
 # Token Manager
@@ -83,4 +84,3 @@ disable_fips=Desactivar FIPS
 
 resetPasswordConfirmationTitle=Restablecer la contraseña maestra
 resetPasswordConfirmationMessage=Su contraseña ha sido borrada.
-
