--- a/es-CL/toolkit/chrome/passwordmgr/passwordmgr.properties
+++ b/es-CL/toolkit/chrome/passwordmgr/passwordmgr.properties
@@ -8,7 +8,7 @@ rememberPassword = Usar el administrador de contraseñas para recordar esta cont
 savePasswordTitle = Confirmar
 # LOCALIZATION NOTE (saveLoginMsg, saveLoginMsgNoUser):
 # %1$S is brandShortName, %2$S is the login's hostname.
-saveLoginMsg = ¿Te gustaría que %1$S guarde esta conexión para %2$S?
+saveLoginMsg = ¿Te gustaría que %1$S guarde esta credencial para %2$S?
 saveLoginMsgNoUser = ¿Te gustaría que %1$S guarde esta contraseña para %2$S?
 saveLoginButtonAllow.label = Guardar
 saveLoginButtonAllow.accesskey = S
@@ -16,14 +16,14 @@ saveLoginButtonDeny.label = No guardar
 saveLoginButtonDeny.accesskey = D
 saveLoginButtonNever.label = Nunca guardar
 saveLoginButtonNever.accesskey = e
-updateLoginMsg = ¿Te gustaría actualizar esta conexión?
+updateLoginMsg = ¿Te gustaría actualizar esta credencial?
 updateLoginMsgNoUser = ¿Te gustaría actualizar esta contraseña?
 updateLoginMsgAddUsername = ¿Quieres añadir un nombre de usuario a la contraseña guardada?
 updateLoginButtonText = Actualizar
 updateLoginButtonAccessKey = U
 updateLoginButtonDeny.label = No actualizar
 updateLoginButtonDeny.accesskey = D
-updateLoginButtonDelete.label = Remover conexión guardada
+updateLoginButtonDelete.label = Remover credencial guardada
 updateLoginButtonDelete.accesskey = R
 # LOCALIZATION NOTE (rememberPasswordMsg):
 # 1st string is the username for the login, 2nd is the login's hostname.
@@ -45,9 +45,9 @@ passwordChangeTitle = Confirmar cambio de la contraseña
 # String is the username for the login.
 updatePasswordMsg = ¿Deseas actualizar la contraseña guardada para "%S"?
 updatePasswordMsgNoUser = ¿Deseas actualizar la contraseña guardada?
-userSelectText2 = Selecciona que conexión actualizar:
-removeLoginPrompt=¿Estás seguro de que deseas eliminar esta conexión?
-removeLoginTitle=Eliminar conexión
+userSelectText2 = Selecciona que credencial actualizar:
+removeLoginPrompt=¿Estás seguro de que deseas eliminar esta credencial?
+removeLoginTitle=Eliminar credencial
 loginsDescriptionAll2=Las credenciales para los siguientes sitios son almacenadas en tu computador
 
 # LOCALIZATION NOTE (useASecurelyGeneratedPassword):
@@ -63,8 +63,8 @@ loginHostAge=%1$S (%2$S)
 # LOCALIZATION NOTE (noUsername):
 # String is used on the context menu when a login doesn't have a username.
 noUsername=Sin nombre de usuario
-duplicateLoginTitle=La conexión ya existe.
-duplicateLogin=Una conexión duplicada ya existe.
+duplicateLoginTitle=La credencial ya existe
+duplicateLogin=Una credencial duplicada ya existe.
 
 # LOCALIZATION NOTE (displaySameOrigin):
 # String is used on the autocomplete row when the login origin is a domain match with the document origin
