Pontoon: Update Welsh (cy) localization of Firefox Co-authored-by: Rhoslyn Prys <rprys@posteo.net>

--- a/cy/dom/chrome/dom/dom.properties
+++ b/cy/dom/chrome/dom/dom.properties
@@ -113,6 +113,8 @@ MediaStreamAudioSourceNodeCrossOrigin=Mae gan y MediaStream basiwyd i createMedi
 MediaStreamTrackAudioSourceNodeCrossOrigin=Mae'r MediaStream basiwyd i createMediaElementSource yn adnodd croesdarddiad, bydd y nod yn allbynnu tawelwch.
 # LOCALIZATION NOTE: Do not translate HTMLMediaElement and MediaStream.
 MediaElementAudioCaptureOfMediaStreamError=Mae'r HTMLMediaElement gafodd ei gipio'n chwarae MediaStream. Nid yw gosod statws maint sain na tewi'n cael ei gynnal ar hyn o bryd.
+# LOCALIZATION NOTE: Do not translate HTMLMediaElement and MediaStream.
+MediaElementStreamCaptureCycle=Daw'r MediaStream a neilltuwyd i srcObject o gipio'r HTMLMediaElement hwn, gan ffurfio cylch, anwybyddu aseiniad.
 MediaLoadExhaustedCandidates=Methodd llwytho pob adnodd ymgeisydd. Oedwyd llwytho cyfrwng.
 MediaLoadSourceMissingSrc=Nid oes gan elfen <source> briodwedd “src”. Methodd llwytho'r adnoddau cyfrwng.
 MediaStreamAudioSourceNodeDifferentRate=Nid yw cysylltu AudioNodes o AudioContexts gyda graddfa samplo gwahanol yn cael ei gynnal.
@@ -382,6 +384,9 @@ AllEntryTypesIgnored=Dim entryTypes dilys; atal y cofrestru.
 # LOCALIZATION NOTE: do not localize key=“%S” modifiers=“%S” id=“%S”
 GTK2Conflict2=Nid yw'r digwyddiad allweddol ar gael ar GTK2:: key=“%S” modifiers=“%S” id=“%S”
 WinConflict2=Nid yw'r digwyddiad allweddol ar gael ar rhai cynlluniau bysellfwrdd: key=“%S” modifiers=“%S” id=“%S”
+
+# LOCALIZATION NOTE: do not trnaslated "document.domain"
+DocumentSetDomainNotAllowedWarning=Nid yw gosod document.domain yn cael ei ganiatáu mewn amgylchedd ynysig traws-darddiad.
 
 #LOCALIZATION NOTE(DeprecatedTestingInterfaceWarning): Do not translate this message. It's just testing only.
 DeprecatedTestingInterfaceWarning=Mae TestingDeprecatedInterface yn rhyngwyneb profi a hwn yw ei neges anghymeradwy profi.
