--- a/cy/browser/chrome/browser/tabbrowser.properties
+++ b/cy/browser/chrome/browser/tabbrowser.properties
@@ -130,3 +130,7 @@ tabs.openWarningTitle=Cadarnhau ar agor
 tabs.openWarningMultipleBranded=Rydych ar fin agor %S tab.  Gall hyn arafu %S tra fo'r tudalennau'n llwytho.  Ydych chi'n siŵr eich bod am barhau?
 tabs.openButtonMultiple=Agor tabiau
 tabs.openWarningPromptMeBranded=Rhybuddio y gall agor tabiau niferus arafu %S
+
+browsewithcaret.checkMsg=Peidio dangos y blwch deialog yma eto.
+browsewithcaret.checkWindowTitle=Pori Caret
+browsewithcaret.checkLabel=Mae pwyso F7 yn cychwyn a diffodd Pori Caret. Mae'r nodwedd hon yn gosod cyrchwr symudol ar dudalennau gwe, gan ganiatáu i chi ddewis testun gyda'r bysellfwrdd. Hoffech chi gychwyn Pori Caret?
