Pontoon: Update Swedish (sv-SE) localization of Firefox Co-authored-by: Luna Jernberg <bittin@cafe8bitar.se>

--- a/sv-SE/browser/chrome/browser/tabbrowser.properties
+++ b/sv-SE/browser/chrome/browser/tabbrowser.properties
@@ -38,7 +38,6 @@ tabs.closeWarningPromptMe=Varna när jag försöker stänga flera flikar
 # of tabs in these windows.
 # Note that every one of these plural forms must contain one instance of '%S'.
 tabs.closeWarningMultipleWindows=;Du är på väg att stänga #1 fönster %S. Är du säker på att du vill fortsätta?
-
 # LOCALIZATION NOTE (tabs.closeWarningMultipleWindowsSessionRestore2):
 # Semicolon-separated list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
@@ -131,3 +130,6 @@ tabs.openWarningTitle=Bekräfta öppning
 tabs.openWarningMultipleBranded=Du är på väg att öppna %S flikar.  Detta kan göra %S långsamt under tiden sidorna laddas.  Är du säker på att du vill fortsätta?
 tabs.openButtonMultiple=Öppna flikar
 tabs.openWarningPromptMeBranded=Varna när öppnande av många flikar kan göra %S långsam
+
+browsewithcaret.checkMsg=Visa inte denna dialogruta igen.
+browsewithcaret.checkWindowTitle=Markörbläddra
