Pontoon: Update Hungarian (hu) localization of Firefox Co-authored-by: Balázs Meskó <meskobalazs@mailbox.org>

--- a/hu/browser/installer/custom.properties
+++ b/hu/browser/installer/custom.properties
@@ -46,6 +46,7 @@ ICONS_QUICKLAUNCH=&Gyorsindítás eszköztár
 WARN_MANUALLY_CLOSE_APP_INSTALL=A $BrandShortName programot be kell zárni a telepítés folytatásához.\n\nA folytatáshoz zárja be a $BrandShortName programot.
 WARN_MANUALLY_CLOSE_APP_UNINSTALL=A $BrandShortName programot be kell zárni az eltávolítás folytatásához.\n\nA folytatáshoz zárja be a $BrandShortName programot.
 WARN_MANUALLY_CLOSE_APP_LAUNCH=A $BrandShortName már fut.\n\nZárja be a $BrandShortName programot, mielőtt elindítaná a most telepített verziót.
+WARN_MANUALLY_CLOSE_APP_REFRESH=A $BrandShortName programot be kell zárni a frissítés folytatásához.\n\nA folytatáshoz zárja be a $BrandShortName programot.
 WARN_WRITE_ACCESS=Nincs írási joga a telepítési könyvtárhoz.\n\nKattintson az OK gombra, és válasszon egy másik könyvtárat.
 WARN_DISK_SPACE=A kiválasztott hely lemezterülete nem elegendő a telepítéshez.\n\nKattintson az OK gombra, és válasszon egy másik helyet.
 WARN_MIN_SUPPORTED_OSVER_MSG=Elnézést, a $BrandShortName nem telepíthető. A $BrandShortName ezen verziójához ${MinSupportedVer} vagy újabb szükséges. További információkért kattintson az OK gombra.
@@ -60,6 +61,7 @@ UN_CONFIRM_PAGE_TITLE=A $BrandFullName eltávolítása
 UN_CONFIRM_PAGE_SUBTITLE=A $BrandFullName eltávolítása a számítógépről
 UN_CONFIRM_UNINSTALLED_FROM=A $BrandShortName eltávolításra kerül a következő helyről:
 UN_CONFIRM_CLICK=A folytatáshoz kattintson az Eltávolítás gombra.
+
 
 BANNER_CHECK_EXISTING=Meglévő telepítés ellenőrzése…
 
