--- a/hu/browser/chrome/browser/tabbrowser.properties
+++ b/hu/browser/chrome/browser/tabbrowser.properties
@@ -38,7 +38,6 @@ tabs.closeWarningPromptMe=Figyelmeztetés több lap bezárása előtt
 # of tabs in these windows.
 # Note that every one of these plural forms must contain one instance of '%S'.
 tabs.closeWarningMultipleWindows=;#1 böngészőablak fog bezáródni, %S. Biztos folytatja?
-
 # LOCALIZATION NOTE (tabs.closeWarningMultipleWindowsSessionRestore2):
 # Semicolon-separated list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
@@ -131,3 +130,7 @@ tabs.openWarningTitle=Megnyitás megerősítése
 tabs.openWarningMultipleBranded=%S lap fog megnyílni. Ez lelassíthatja a %S programot, miközben a lapok betöltődnek. Biztosan folytatja?
 tabs.openButtonMultiple=Lapok megnyitása
 tabs.openWarningPromptMeBranded=Figyelmeztetés, hogy több lap megnyitása lelassíthatja a %S programot
+
+browsewithcaret.checkMsg=Ne jelenjen meg többet ez a párbeszédpanel.
+browsewithcaret.checkWindowTitle=Kurzoros böngészés
+browsewithcaret.checkLabel=Az F7 gomb kapcsolja be, illetve ki a kurzoros böngészést. Ebben az üzemmódban egy mozgatható kurzor jelenik meg a weboldalakon, lehetővé téve a szöveg kijelölését a billentyűzettel. Szeretné bekapcsolni a kurzoros böngészést?
