Pontoon: Update Hungarian (hu) localization of Firefox Co-authored-by: Balázs Meskó <meskobalazs@mailbox.org>

--- a/hu/browser/installer/custom.properties
+++ b/hu/browser/installer/custom.properties
@@ -63,6 +63,9 @@ UN_CONFIRM_UNINSTALLED_FROM=A $BrandShortName eltávolításra kerül a követke
 UN_CONFIRM_CLICK=A folytatáshoz kattintson az Eltávolítás gombra.
 
 UN_REFRESH_PAGE_TITLE=Ehelyett inkább felfrissíti a $BrandShortName böngészőt?
+UN_REFRESH_PAGE_EXPLANATION=Ha problémái vannak a $BrandShortName böngészővel, akkor a felfrissítés segíthet.\n\nEz visszaállítja az alapértelmezett beállításokat és eltávolítja a kiegészítőket. Induljon tiszta lappal az optimális teljesítmény érdekében.
+UN_REFRESH_LEARN_MORE=&További tudnivalók
+UN_REFRESH_BUTTON=A $BrandShortName &felfrissítése
 
 BANNER_CHECK_EXISTING=Meglévő telepítés ellenőrzése…
 
