--- a/hu/devtools/client/netmonitor.properties
+++ b/hu/devtools/client/netmonitor.properties
@@ -555,7 +555,7 @@ certmgr.issuerinfo.label=Kibocsátó
 
 # LOCALIZATION NOTE (certmgr.periodofvalidity.label):
 # A label used for a certificate section in security tab
-# This section displays the valide period of this fingerprints
+# This section displays the valid period of this fingerprints
 certmgr.periodofvalidity.label=Érvényesség időtartama
 
 # LOCALIZATION NOTE (certmgr.begins):
@@ -568,7 +568,7 @@ certmgr.expires=Lejárat:
 
 # LOCALIZATION NOTE (certmgr.fingerprints.label):
 # A label used for a certificate section in security tab
-# This section displays the valide period of this fingerprints
+# This section displays the valid period of this fingerprints
 certmgr.fingerprints.label=Ujjlenyomatok
 
 # LOCALIZATION NOTE (certmgr.certdetail.sha256fingerprint):
@@ -868,10 +868,6 @@ netmonitor.actionbar.blockSearchPlaceholder=Erőforrás blokkolása, ha az URL e
 # tooltip shown over the remove button for blocked URL item
 netmonitor.actionbar.removeBlockedUrl=Minta eltávolítása
 
-# LOCALIZATION NOTE (netmonitor.actionbar.addBlockedUrl): This is the
-# tooltip shown over the Add Blocked URL button
-netmonitor.actionbar.addBlockedUrl=Minta hozzáadása
-
 # LOCALIZATION NOTE (netmonitor.actionbar.requestBlockingUsageNotice): This is the
 # usage notice displayed when network blocking list is empty
 netmonitor.actionbar.requestBlockingUsageNotice=URL-minták hozzáadása a megfelelő kérések blokkolásához.
@@ -1130,9 +1126,9 @@ netmonitor.summary.learnMore=Tudjon meg többet az állapotkódról
 # in the network details headers tab identifying the referrer policy.
 netmonitor.summary.referrerPolicy=Hivatkozó házirend:
 
-# LOCALIZATION NOTE (netmonitor.headers.referrer): This is the label displayed
+# LOCALIZATION NOTE (netmonitor.headers.referrerPolicy): This is the label displayed
 # in the network details headers tab identifying the referrer policy.
-netmonitor.headers.referrer=Hivatkozó
+netmonitor.headers.referrerPolicy=Hivatkozó házirend
 
 # LOCALIZATION NOTE (netmonitor.headers.contentBlocking): This is the label displayed
 # in the network details headers tab identifying the content blocking mode.
