--- a/hu/dom/chrome/security/security.properties
+++ b/hu/dom/chrome/security/security.properties
@@ -88,6 +88,8 @@ WeakCipherSuiteWarning=Ez az oldal az elavult és nem biztonságos RC4 titkosít
 
 DeprecatedTLSVersion=Ez az oldal a TLS elavult verzióját használja, amely 2020 márciusában le lesz tiltva. Frissítsen a TLS 1.2-es vagy 1.3-as verziójára.
 
+DeprecatedTLSVersion2=Ez a webhely a TLS elavult verzióját használja. Frissítsen a TLS 1.2-es vagy 1.3-as verziójára.
+
 #XCTO: nosniff
 # LOCALIZATION NOTE: Do not translate "X-Content-Type-Options: nosniff".
 MimeTypeMismatch2=Az erőforrás blokkolva lett innen: „%1$S” a MIME-típus („%2$S”) eltérése miatt (X-Content-Type-Options: nosniff).
@@ -139,14 +141,6 @@ FeaturePolicyInvalidAllowValue=Funkció házirend: A nem támogatott „%S” é
 ReferrerLengthOverLimitation=HTTP Referrer fejléc: A hossza nagyobb, mint a(z) „%1$S” bájtkorlát – a hivatkozó fejléc lerövidítve az eredetre: „%2$S”
 # LOCALIZATION NOTE: "%1$S" is the limitation length (bytes) of referrer URI, "%2$S" is the origin of the referrer URI.
 ReferrerOriginLengthOverLimitation=HTTP Referrer fejléc: Az eredet hossza a hivatkozóban hosszabb, mint a(z) „%1$S” bájtkorlát – a hivatkozó eltávolítva az eredettel: „%2$S”.
-
-# X-Frame-Options
-# LOCALIZATION NOTE: %1$S is the header value, %2$S is frame URI and %3$S is the parent document URI.
-XFOInvalid = Érvénytelen X-Frame-Options: „%1$S” fejléc innen: „%2$S” betöltve ide: „%3$S”.
-# LOCALIZATION NOTE: %1$S is the header value, %2$S is frame URI and %3$S is the parent document URI.
-XFODeny = Az X-Frame-Options megakadályozta a betöltést: „%1$S” innen: „%2$S”, az oldal nem engedélyezi a keretbe ágyazást. Betöltés megkísérelve a következőbe: „%3$S”.
-# LOCALIZATION NOTE: %1$S is the header value, %2$S is frame URI and %3$S is the parent document URI.
-XFOSameOrigin = Az X-Frame-Options megakadályozta a betöltést: „%1$S” innen: „%2$S”, az oldal nem engedélyezi a nem azonos eredetű beágyazást innen: „%3$S”.
 
 # X-Frame-Options
 # LOCALIZATION NOTE(XFrameOptionsInvalid): %1$S is the header value, %2$S is frame URI. Do not translate "X-Frame-Options".
