Pontoon: Update Hungarian (hu) localization of Firefox Co-authored-by: Balázs Meskó <meskobalazs@mailbox.org>

--- a/hu/dom/chrome/dom/dom.properties
+++ b/hu/dom/chrome/dom/dom.properties
@@ -113,6 +113,7 @@ MediaStreamAudioSourceNodeCrossOrigin=A createMediaStreamSource-nak átadott Med
 MediaStreamTrackAudioSourceNodeCrossOrigin=A createMediaStreamTrackSource-nak átadott MediaStream egy cross-origin erőforrás, a csomópont üres kimenetű lesz.
 # LOCALIZATION NOTE: Do not translate HTMLMediaElement and MediaStream.
 MediaElementAudioCaptureOfMediaStreamError=Az elfogott HTMLMediaElement egy MediaStreamet játszik le. A hangerő vagy a némítási állapot jelenleg nem támogatott.
+# LOCALIZATION NOTE: Do not translate HTMLMediaElement and MediaStream.
 MediaLoadExhaustedCandidates=Minden jelölt erőforrás betöltése sikertelen. A média betöltése felfüggesztve.
 MediaLoadSourceMissingSrc=A <source> elemnek nincs „src” attribútuma. A média-erőforrás betöltése meghiúsult.
 MediaStreamAudioSourceNodeDifferentRate=Különböző mintavételezési aránnyal rendelkező AudioContextekből származó AudioNode-ok összekapcsolása jelenleg nem támogatott.
@@ -382,6 +383,9 @@ AllEntryTypesIgnored=Nincs érvényes entryTypes; regisztráció megszakítása.
 # LOCALIZATION NOTE: do not localize key=“%S” modifiers=“%S” id=“%S”
 GTK2Conflict2=A billentyűesemény nem érhető el GTK2 alatt: key="%S" modifiers="%S" id="%S"
 WinConflict2=A billentyűesemény nem érhető el egyes billentyűzetkiosztások esetén: key="%S" modifiers="%S" id="%S"
+
+# LOCALIZATION NOTE: do not trnaslated "document.domain"
+DocumentSetDomainNotAllowedWarning=A document.domain beállítása eredettől független környezetben nem engedélyezett.
 
 #LOCALIZATION NOTE(DeprecatedTestingInterfaceWarning): Do not translate this message. It's just testing only.
 DeprecatedTestingInterfaceWarning=A TestingDeprecatedInterface egy csak tesztelésre való interfész, és ez az elavultságra figyelmeztető tesztüzenete.
