Pontoon: Update Hungarian (hu) localization of Firefox Co-authored-by: Balázs Meskó <meskobalazs@mailbox.org>

--- a/hu/dom/chrome/dom/dom.properties
+++ b/hu/dom/chrome/dom/dom.properties
@@ -114,6 +114,7 @@ MediaStreamTrackAudioSourceNodeCrossOrigin=A createMediaStreamTrackSource-nak á
 # LOCALIZATION NOTE: Do not translate HTMLMediaElement and MediaStream.
 MediaElementAudioCaptureOfMediaStreamError=Az elfogott HTMLMediaElement egy MediaStreamet játszik le. A hangerő vagy a némítási állapot jelenleg nem támogatott.
 # LOCALIZATION NOTE: Do not translate HTMLMediaElement and MediaStream.
+MediaElementStreamCaptureCycle=A srcObject értékéül rendelt MediaStream ezen HTMLMediaElement rögzítéséből származik, ciklust alkotva, így az értékadás figyelmen kívül lett hagyva.
 MediaLoadExhaustedCandidates=Minden jelölt erőforrás betöltése sikertelen. A média betöltése felfüggesztve.
 MediaLoadSourceMissingSrc=A <source> elemnek nincs „src” attribútuma. A média-erőforrás betöltése meghiúsult.
 MediaStreamAudioSourceNodeDifferentRate=Különböző mintavételezési aránnyal rendelkező AudioContextekből származó AudioNode-ok összekapcsolása jelenleg nem támogatott.
