Pontoon: Update Korean (ko) localization of Firefox Co-authored-by: Kim YoungCheon <circcc@gmail.com>

--- a/ko/browser/chrome/browser/browser.properties
+++ b/ko/browser/chrome/browser/browser.properties
@@ -552,7 +552,7 @@ contentBlocking.trackers.blocking.label=차단중
 #   It forms the end of the (imaginary) sentence "www.example.com [was] Blocked"
 contentBlocking.trackersView.blocked.label=차단됨
 
-contentBlocking.trackersView.empty.label=이 사이트에서 발견되지 않음
+contentBlocking.trackersView.empty.label=이 사이트에서 감지되지 않음
 
 # LOCALIZATION NOTE (contentBlocking.cookies.allowed.label):
 #   This label signals that this type of content blocking is turned
@@ -579,7 +579,7 @@ contentBlocking.cookiesView.firstParty.label=이 사이트에서
 # LOCALIZATION NOTE (contentBlocking.cookiesView.firstParty.empty.label):
 #  This references the header from contentBlocking.cookiesView.firstParty.label:
 #  "[Cookies] From This Site: None detected on this site".
-contentBlocking.cookiesView.firstParty.empty.label=이 사이트에서 발견되지 않음
+contentBlocking.cookiesView.firstParty.empty.label=이 사이트에서 감지되지 않음
 
 contentBlocking.cookiesView.trackers.label=추적 쿠키
 
@@ -587,13 +587,13 @@ contentBlocking.cookiesView.trackers2.label=교차 사이트 추적 쿠키
 # LOCALIZATION NOTE (contentBlocking.cookiesView.trackers.empty.label):
 #  This references the header from contentBlocking.cookiesView.trackers.label:
 #  "Tracking Cookies: None detected on this site".
-contentBlocking.cookiesView.trackers.empty.label=이 사이트에서 발견되지 않음
+contentBlocking.cookiesView.trackers.empty.label=이 사이트에서 감지되지 않음
 
 contentBlocking.cookiesView.thirdParty.label=제3자 쿠키
 # LOCALIZATION NOTE (contentBlocking.cookiesView.thirdParty.empty.label):
 #  This references the header from contentBlocking.cookiesView.thirdParty.label:
 #  "Third-Party Cookies: None detected on this site".
-contentBlocking.cookiesView.thirdParty.empty.label=이 사이트에서 발견되지 않음
+contentBlocking.cookiesView.thirdParty.empty.label=이 사이트에서 감지되지 않음
 
 # LOCALIZATION NOTE (contentBlocking.cookiesView.allowed.label):
 #   This label is shown next to a cookie origin in the cookies subview.
@@ -673,7 +673,7 @@ trackingProtection.icon.disabledTooltip=추적 콘텐츠 감지됨
 trackingProtection.icon.activeTooltip2=소셜 미디어 추적기, 교차 사이트 추적 쿠키 및 핑거프린터 차단.
 trackingProtection.icon.disabledTooltip2=이 사이트에 향상된 추적 방지 기능이 꺼져 있습니다.
 # LOCALIZATION NOTE (trackingProtection.icon.noTrackersDetectedTooltip): %S is brandShortName.
-trackingProtection.icon.noTrackersDetectedTooltip=이 페이지에서 %S에 알려진 추적기가 탐지되지 않았습니다.
+trackingProtection.icon.noTrackersDetectedTooltip=이 페이지에서 %S에 알려진 추적기가 감지되지 않았습니다.
 
 # LOCALIZATION NOTE (protections.header):
 # Header of the Protections Panel. %S is replaced with the site's hostname.
