--- a/ko/devtools/client/inspector.properties
+++ b/ko/devtools/client/inspector.properties
@@ -130,7 +130,7 @@ eventsTooltip.openInDebugger=디버거에서 열기
 eventsTooltip.unknownLocation=알 수 없는 위치
 
 #LOCALIZATION NOTE: Used in the mouseover tooltip when hovering "Unknown location."
-eventsTooltip.unknownLocationExplanation=이 리스너의 처음 위치를 알 수 없습니다. Babel과 같은 도구로 변환되었을 수 있습니다.
+eventsTooltip.unknownLocationExplanation=이 리스너의 원래 위치를 감지할 수 없습니다. 코드가 Babel과 같은 유틸리티에 의해 변환되었을 수 있습니다.
 
 #LOCALIZATION NOTE: Used in the tooltip for Bubbling
 eventsTooltip.Bubbling=버블링
