--- a/zh-TW/dom/chrome/layout/css.properties
+++ b/zh-TW/dom/chrome/layout/css.properties
@@ -129,7 +129,7 @@ PEFontDescExpected=預期字型描述但是找到「%1$S」。
 PEUnknownFontDesc=不明描述「%1$S」，位於 @font-face 。
 PEMQExpectedExpressionStart=預期「(」以起始媒體查詢運算式但是找到「%1$S」。
 PEMQExpressionEOF=媒體查詢運算式內容
-PEMQExpectedFeatureName=預期媒體功能名稱但找到「%1$S」。
+PEMQExpectedFeatureName=預期應有媒體功能名稱，卻出現「%1$S」。
 PEMQExpectedFeatureNameEnd=預期「:」或「)」在媒體功能名稱後，但找到「%1$S」。
 PEMQNoMinMaxWithoutValue=以 max- 或 min- 開頭的媒體功能必須要有值。
 PEMQExpectedFeatureValue=找到無效的媒體功能名稱。
